# internal/presentation/me/accounts/transactions/execute_transaction_handler.go
@@ -20,19 +20,28 @@ func NewExecuteTransactionHandler(executeTransactionUsecase transactionApp.IExec
 	}
 }
 
-type ExecuteTransactionRequest struct {
-	AccountID         string  `param:"account_id" example:"01J9R7YPV1FH1V0PPKVSB5C8FW"`
-	OperationType     string  `json:"operationType" example:"deposit"`
+type ExecuteTransactionRequestParams struct {
+	AccountID string `param:"account_id" example:"01J9R7YPV1FH1V0PPKVSB5C8FW"`
+}
+
+type ExecuteTransactionRequestBody struct {
+	Password          string  `json:"password" example:"1234"`
+	OperationType     string  `json:"operationType" example:"DEPOSIT"`
 	Amount            float64 `json:"amount" example:"1000"`
 	Currency          string  `json:"currency" example:"JPY"`
-	RecieverAccountID *string `json:"recieverAccountId" example:"01J9R7YPV1FH1V0PPKVSB5C8FW"`
+	RecieverAccountID *string `json:"recieverAccountId" example:"01J9R8AJ1Q2YDH1X9836GS9D87"`
+}
+
+type ExecuteTransactionRequest struct {
+	ExecuteTransactionRequestParams
+	ExecuteTransactionRequestBody
 }
 
 type ExecuteTransactionResponse struct {
-	ID                string  `json:"id" example:"01J9R7YPV1FH1V0PPKVSB5C8FW"`
+	ID                string  `json:"id" example:"01J9R8AJ1Q2YDH1X9836GS9E89"`
 	AccountID         string  `json:"accountId" example:"01J9R7YPV1FH1V0PPKVSB5C8FW"`
-	RecieverAccountID *string `json:"recieverAccountId" example:"01J9R7YPV1FH1V0PPKVSB5C8FW"`
-	OperationType     string  `json:"operationType" example:"deposit"`
+	RecieverAccountID *string `json:"recieverAccountId" example:"01J9R8AJ1Q2YDH1X9836GS9D87"`
+	OperationType     string  `json:"operationType" example:"DEPOSIT"`
 	Amount            float64 `json:"amount" example:"1000"`
 	Currency          string  `json:"currency" example:"JPY"`
 	TransactionAt     string  `json:"transactionAt" example:"2024-03-20T15:00:00Z"`
@@ -40,18 +49,17 @@ type ExecuteTransactionResponse struct {
 
 // @Summary Execute Transaction
 // @Description This endpoint executes a transaction (deposit, withdraw, or transfer) for the specified account.
-// @Tags Account API
+// @Tags Transaction API
 // @Security BearerAuth
 // @Accept json
 // @Produce json
 // @Param account_id path string true "Account ID"
-// @Param request body ExecuteTransactionRequest true "Request Body"
+// @Param request body ExecuteTransactionRequestBody true "Request Body"
 // @Success 200 {object} ExecuteTransactionResponse
 // @Failure 400 {object} response.ValidationErrorResponse "Validation Failed or Bad Request"
 // @Failure 401 {object} response.ErrorResponse "Unauthorized"
 // @Failure 403 {object} response.ErrorResponse "Forbidden"
 // @Failure 404 {object} response.ErrorResponse "Not Found"
-// @Failure 409 {object} response.ErrorResponse "Conflict"
 // @Failure 500 {object} response.ErrorResponse "Internal Server Error"
 // @Router /api/v1/me/accounts/{account_id}/transactions [post]
 func (h *ExecuteTransactionHandler) Run(ctx echo.Context) error {
@@ -66,6 +74,7 @@ func (h *ExecuteTransactionHandler) Run(ctx echo.Context) error {
 
 	dto, err := h.execTransactionUC.Run(ctx.Request().Context(), transactionApp.ExecuteTransactionCommand{
 		AccountID:         req.AccountID,
+		Password:          req.Password,
 		OperationType:     req.OperationType,
 		Amount:            req.Amount,
 		Currency:          req.Currency,
@@ -75,7 +84,8 @@ func (h *ExecuteTransactionHandler) Run(ctx echo.Context) error {
 		switch err {
 		case moneyDomain.ErrDifferentCurrency:
 			return response.BadRequest(ctx, err)
-		case moneyDomain.ErrInsufficientBalance:
+		case moneyDomain.ErrInsufficientBalance,
+			accountDomain.ErrUnmatchedPassword:
 			return response.Forbidden(ctx, err)
 		case accountDomain.ErrNotFound,
 			accountDomain.ErrRecieverNotFound:
